Hybird dev mode

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,7 @@ default: &default
 
 development:
   <<: *default
+  template: template0
   database: southwest-checkin_development
 
   # The specified database role being used to connect to postgres.
@@ -57,6 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  template: template0
   database: southwest-checkin_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
@@ -80,6 +82,7 @@ test:
 #
 production:
   <<: *default
-  database: southwest_checkin_production
+  template: template0
+  database: southwest-checkin_production
   username: <%= ENV['SOUTHWEST_CHECKIN_DATABASE_USER'] %>
   password: <%= ENV['SOUTHWEST_CHECKIN_DATABASE_PASSWORD'] %>
